--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "@fortawesome/fontawesome-svg-core": "^1.2.6",
+    "@fortawesome/free-solid-svg-icons": "^5.4.1",
+    "@fortawesome/vue-fontawesome": "^0.1.1",
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.0.1",
@@ -27,6 +32,7 @@
     "eslint-plugin-vue": "^5.0.0-0",
     "postcss-preset-env": "^5.3.0",
     "tailwindcss": "^0.6.5",
+    "vue-cli-plugin-fontawesome": "^0.1.0",
     "vue-template-compiler": "^2.5.17"
   }
 }
