--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "babel-jest": "^23.6.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "node-sass": "^4.11.0",
     "postcss-preset-env": "^5.3.0",
+    "sass-loader": "^7.1.0",
     "tailwindcss": "^0.6.5",
     "vue-cli-plugin-fontawesome": "^0.1.0",
     "vue-template-compiler": "^2.5.17"
